Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,12 +40,8 @@
 <a name="1-setting-it-up" class="anchor" href="#1-setting-it-up"><span class="octicon octicon-link"></span></a>1. Setting it up</h3>
 
 <ol>
-<li>Simply drop the grid.less file to your other less-Files</li>
-<li>Import it in your less-Stylesheet that will get compiled: </li>
-</ol><div class="highlight highlight-css"><pre><span class="k">@import</span> <span class="s2">"grid"</span><span class="p">;</span> 
-</pre></div>
-
-<ol>
+<li>Simply drop the grid.less file to your other less-Files.</li>
+<li>Import it in your less-Stylesheet that will get compiled.</li>
 <li>Apply the functions on your elements!</li>
 </ol><h3>
 <a name="2-rows" class="anchor" href="#2-rows"><span class="octicon octicon-link"></span></a>2. Rows</h3>
